[package]
name = "http-to-https-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["webpki-roots"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
bytes = "1.0"
